# grpc_task_management

./: .gitignore  CMakeLists.txt  client.cpp  server.cpp
benchmark/: CMakeLists.txt  benchmark_test.cpp
include/: admin.h  define.h  messagequeue.h  requesthandler.h  sqlmanager.h  task.h  user.h
src/: admin.cpp  client.cpp  compile_proto.sh  greet.grpc.pb.cc  greet.grpc.pb.h  greet.pb.cc  greet.pb.h  greet.proto  messagequeue.cpp  requesthandler.cpp  server.cpp  sqlmanager.cpp  task.cpp  user.cpp
